# its8080-hw-1

./: .gitignore  README.md  pyproject.toml
assignment-1/: solution.ipynb
assignment-1/data/: solar_243090.csv
