[tool.poetry]
name = "its8080"
version = "0.1.0"
description = "Home assignments"
authors = ["Pavel Lavreshin <pavel.lavreshin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
